--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
      <div class="row no-gutters">
             <div class="col-lg-4 col-md-4">
-                    <img src="img/vaidehi1.jpg">
+                    <img src="img/vaidehi1.JPG">
             </div>
 
             <div class="col-lg-8  col-md-8">
