--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
  </div>
 
 <h4> CSS </h4>
-<div class="progress  mb-4">
+<div class="progress  mb-4"
   <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:80%">
  </div>
 </div>
 
 <h4> BootStrap </h4>
 <div class="progress  mb-4">
-  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:60%">
+  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:40%">
  </div>
 </div>
 
@@ -98,13 +98,13 @@
 
 <h4> Python </h4>
 <div class="progress  mb-4">
-  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:65%">
+  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:45%">
  </div>
 </div>
 
 <h4> Flask</h4>
 <div class="progress  mb-4">
-  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:50%">
+  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:30%">
  </div>
 </div>
 
