--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
  </div>
 
 <h4> CSS </h4>
-<div class="progress  mb-4"
-  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:80%">
+<div class="progress  mb-4">
+  <div class="progress-bar  progress-bar-striped  progress-bar-animated"  style="width:70%">
  </div>
 </div>
 
