--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 <div class="collapse"  id="contact">
      <div class="p-5  text-black bg-warning">
-          <h2>Contact Me</h2>
+          <h2>Contact</h2>
    </div>
    <p>Mob no:7000734518 <br> Email id:vaidehidangi23@gmail.com</p>
          <h2>Social sites</h2>
